Bug 59573 - Problem with comments attached to text ranges, if the text range is at end of document
Summary: Problem with comments attached to text ranges, if the text range is at end of...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-18 22:12 UTC by Gerry
Modified: 2013-02-12 12:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Problem with text ranges at end of document.odt (8.91 KB, application/vnd.oasis.opendocument.text)
2013-01-18 22:12 UTC, Gerry
Details
Problem-with-comments-text-ranges.png (298.62 KB, image/png)
2013-01-18 22:14 UTC, Gerry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerry 2013-01-18 22:12:41 UTC
Created attachment 73255 [details]
Problem with text ranges at end of document.odt

There is a problem with the new feature "comments for text ranges" in the case that the comment is at the end of the document.

Problems:
(a) There is not way to write text after the commented text range
(b) The comment anchor moves away from the commented text range

How to reproduce:
* Please open attached document.
* Try to write text after the commented text range. It does not work.
Result: Either the text range gets extended or - if you move the cursor with the cursor keys to the far right, the comment anchor gets detached from the commented text range (please see screen shot).

System: Ubuntu 12.10, LibreOffice Version 4.0.0.1 (Build ID: 527dba6f6e0cfbbc71bd6e7b88a52699bb48799)
Comment 1 Gerry 2013-01-18 22:14:07 UTC
Created attachment 73256 [details]
Problem-with-comments-text-ranges.png
Comment 2 Jorendc 2013-01-19 23:51:53 UTC
I can reproduce using Mac OSX 10.8.2 and LO 4.1.0.0.alpha0+ (Build ID: 23c099a0236062724430efb986251637095c8d4)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2013-01-17_23:41:56

How to reproduce:

* Open writer
* Enter some text
* Place cursor at the end of the text 
* Insert comment
* Enter some text in the comment
* try to enter some more text behind the comment you just made.

@Miklos: because I found in the Release Notes of 4.0 this is a feature you made (many thanks btw) I add you to CC. Can you please take a look at this?

Kind regards,
Joren
Comment 3 Miklos Vajna 2013-01-21 21:39:38 UTC
Actually, this is easy to work around, if you move around with the arrow keys, you can notice that there is an invisible character before the commented text range, and there are two ones after it. The problem comes when you insert a character between the two ending special chars, or right before the first ending special char.

But sure, I'll try to fix this properly.
Comment 4 Not Assigned 2013-02-11 12:31:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd505fdb9f669f365ff39b0ef46f0742c638e333

fdo#59573 position after fieldmark and before annotation anchor is read-only



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2013-02-11 13:32:21 UTC
Fixed on master, -4-0 review: https://gerrit.libreoffice.org/2101
Comment 6 Gerry 2013-02-11 16:54:07 UTC
Thanks a lot, Miklos!
Comment 7 Not Assigned 2013-02-12 12:56:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c7ee2734ef5be82e89e0dfe366e674e0898cc23&h=libreoffice-4-0

fdo#59573 position after fieldmark and before annotation anchor is read-only


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.