fdo#59573 position after fieldmark and before annotation anchor is read-only

Also revert "SwTxtPaintInfo::_DrawBackBrush: draw dark border around
comment highlight" (commit 57c8c34fcdc2d594d2da3593eb9d86d0daf4e18c), as
it draws confusing vertical lines inside the comment when it has
multiple runs.

(cherry picked from commit bd505fdb9f669f365ff39b0ef46f0742c638e333)

Conflicts:
	sw/qa/core/swdoc-test.cxx

Change-Id: If0f60e4a28878c2b31327ae3c04ae11470bc1f52
Reviewed-on: https://gerrit.libreoffice.org/2101
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>