sw/qa/core/uwriter.cxx
@@ -91,6 +91,7 @@ public:
     void testUserPerceivedCharCount();
     void testGraphicAnchorDeletion();
     void testFdo57938();
+    void testFdo59573();
 
     CPPUNIT_TEST_SUITE(SwDocTest);
     CPPUNIT_TEST(randomTest);
@@ -102,6 +103,7 @@ public:
     CPPUNIT_TEST(testUserPerceivedCharCount);
     CPPUNIT_TEST(testGraphicAnchorDeletion);
     CPPUNIT_TEST(testFdo57938);
+    CPPUNIT_TEST(testFdo59573);
     CPPUNIT_TEST_SUITE_END();
 
 private:
@@ -894,6 +896,26 @@ void SwDocTest::testFdo57938()
     aPaM.GetMark()->nContent = 1;
     // The problem was that "a" was considered read-only, so could not be deleted.
     CPPUNIT_ASSERT_EQUAL(false, aPaM.HasReadonlySel(false));
+}
+
+void SwDocTest::testFdo59573()
+{
+    SwNodeIndex aIdx(m_pDoc->GetNodes().GetEndOfContent(), -1);
+    SwPaM aPaM(aIdx);
+
+    // Insert "abc" and create a fieldmark around "b".
+    OUString aTest("abc");
+    m_pDoc->InsertString(aPaM, aTest);
+    aPaM.SetMark();
+    aPaM.GetPoint()->nContent = 1;
+    aPaM.GetMark()->nContent = 2;
+    IDocumentMarkAccess* pMarksAccess = m_pDoc->getIDocumentMarkAccess();
+    pMarksAccess->makeFieldBookmark(aPaM, "", ODF_COMMENTRANGE);
+    aPaM.GetPoint()->nContent = 4;
+    aPaM.GetMark()->nContent = 4;
+    // The problem was that the position after the fieldmark end and before the
+    // annotation anchor wasn't read-only.
+    CPPUNIT_ASSERT_EQUAL(true, aPaM.HasReadonlySel(false));
 }
 
 void SwDocTest::setUp()
